# tasai

./: README.md  pyproject.toml
docs/: MANUAL.md
scripts/: export_paper_snapshot.sh
tasai/cli/: __init__.py
